kubernetes/base/apps/self-hosted/wger/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger
  labels:
    app: wger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      containers:
      - name: wger
        image: wger/server:2.4-dev
        ports:
          - containerPort: 8000
            name: http-wger

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            memory: 1Gi

        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
