kubernetes/base/apps/self-hosted/wger/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wger
spec:
  selector:
    app: wger
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http-wger
